Created 'CharactersViewModel', 'Characters POJO', 'CharactersActivity' classes.
Modified 'MyRepository' tp accomodate new class and elements.

--- a/app/src/main/res/layout/activity_characters.xml
+++ b/app/src/main/res/layout/activity_characters.xml
@@ -7,4 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".CharactersActivity">
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/charactersLoadingBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="228dp"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/charac_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
