NetworkUtils: Fixed the null pointer exception by adding the '?' character.
HousesInfoActivity: Fixed the null pointer exception by adding the 's' character.

--- a/app/src/main/res/layout/activity_houses_id.xml
+++ b/app/src/main/res/layout/activity_houses_id.xml
@@ -6,11 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".HousesInfoActivity">
 
-    <TextView
-        android:id="@+id/house_id_name_tv"
-        android:layout_width="match_parent"
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/hid_loadingBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="TextView"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="236dp"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/house_id_name_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
