--- a/app/src/main/res/layout/activity_characters_info.xml
+++ b/app/src/main/res/layout/activity_characters_info.xml
@@ -6,11 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".CharactersInfoActivity">
 
-    <TextView
-        android:id="@+id/charac_info_tv"
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/char_loadingBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="236dp"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/charac_recyclerView_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
